--- a/exercicios/aula07/ex01/ex001.html
+++ b/exercicios/aula07/ex01/ex001.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do dia</h1>
     </header> 
@@ -15,7 +15,7 @@
             <p id="horario"></p>
         </div>
         <div id="imagem_circular">
-
+            <img id="foto" src="manha_circulo.png" alt="foto da manhã" >
         </div>
     </main>
     <footer>
