--- a/exercicios/aula07/ex02/ex002.html
+++ b/exercicios/aula07/ex02/ex002.html
@@ -13,13 +13,13 @@
     <main>
         <div>
             <div>
-                <label for="ano">Ano de nascimento</label>
-                <input type="number" name="ano" id="iano" min="4" max="4">
+                Ano de nascimento
+                <input type="number" name="txtano" id="txtano" min="0">
             </div>
             <p>
                 Sexo: 
                 <label for="mas">Masculino</label>
-                <input type="radio" name="test" id="mas">
+                <input type="radio" name="test" id="mas" checked>
                 <label for="fem">Feminino</label>
                 <input type="radio" name="test" id="fem">
             </p>
@@ -32,6 +32,6 @@
     <footer>
         <a href="https://github.com/Adilsonneubaner">&copy; Neubaner</a>
     </footer>
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
